Deixando icons footer responsivo

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col mt-3 p-bn-text-footer text-center">
+                <div class="col mt-3 p-bn-text-footer text-center p-bn-footer-text">
                     © 2020 Copyright: <strong>Multiplic Telecom</strong>
                 </div>
             </div>
